--- a/ToDo/Base.lproj/Main.storyboard
+++ b/ToDo/Base.lproj/Main.storyboard
@@ -276,20 +276,49 @@
         <!--MainViewController-->
         <scene sceneID="Q4w-ko-PKU">
             <objects>
-                <viewController id="Lfv-vp-zjk" userLabel="MainViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainViewController" id="Lfv-vp-zjk" userLabel="MainViewController" customClass="MainViewController" customModule="ToDo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="00K-bv-kOX">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Znu-VQ-rID">
+                                <rect key="frame" x="10" y="49" width="394" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Lfv-vp-zjk" id="olt-av-BsU"/>
+                                    <outlet property="delegate" destination="Lfv-vp-zjk" id="JnC-us-wgj"/>
+                                </connections>
+                            </tableView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noTaskFound" translatesAutoresizingMaskIntoConstraints="NO" id="Xqf-hb-J04">
+                                <rect key="frame" x="143" y="384" width="128" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="128" id="Luo-Re-UOu"/>
+                                    <constraint firstAttribute="height" constant="128" id="twr-gd-Qes"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="3ks-hp-hkX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Znu-VQ-rID" firstAttribute="top" secondItem="3ks-hp-hkX" secondAttribute="top" constant="5" id="8er-ZW-SQ8"/>
+                            <constraint firstItem="Xqf-hb-J04" firstAttribute="centerX" secondItem="00K-bv-kOX" secondAttribute="centerX" id="CT5-5Z-WBL"/>
+                            <constraint firstItem="3ks-hp-hkX" firstAttribute="trailing" secondItem="Znu-VQ-rID" secondAttribute="trailing" constant="10" id="MMc-mw-CrO"/>
+                            <constraint firstItem="Znu-VQ-rID" firstAttribute="leading" secondItem="3ks-hp-hkX" secondAttribute="leading" constant="10" id="ctW-70-IcW"/>
+                            <constraint firstItem="Xqf-hb-J04" firstAttribute="centerY" secondItem="00K-bv-kOX" secondAttribute="centerY" id="if2-dv-2Fa"/>
+                            <constraint firstItem="3ks-hp-hkX" firstAttribute="bottom" secondItem="Znu-VQ-rID" secondAttribute="bottom" constant="5" id="weZ-YA-OMB"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Dashboard" image="square.grid.2x2.fill" catalog="system" id="UtE-e4-hUV">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="3" vertical="3"/>
                     </tabBarItem>
+                    <connections>
+                        <outlet property="imgNoTaskFound" destination="Xqf-hb-J04" id="fJG-KX-htf"/>
+                        <outlet property="tblTaskList" destination="Znu-VQ-rID" id="i4K-aI-Lga"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tEU-yj-8nk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="143" y="760"/>
+            <point key="canvasLocation" x="140.57971014492756" y="759.375"/>
         </scene>
         <!--Dashboard View Controller-->
         <scene sceneID="UVv-ba-nj3">
@@ -311,6 +340,7 @@
                         </userDefinedRuntimeAttributes>
                     </tabBar>
                     <connections>
+                        <outlet property="tabBar" destination="dKx-YE-XT6" id="98e-3i-SIj"/>
                         <segue destination="Lfv-vp-zjk" kind="relationship" relationship="viewControllers" id="jff-rm-90N"/>
                         <segue destination="ajH-g7-IU8" kind="relationship" relationship="viewControllers" id="7C4-oA-0Vg"/>
                         <segue destination="4Mk-hO-fAN" kind="relationship" relationship="viewControllers" id="eqS-g5-NGC"/>
@@ -319,7 +349,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qlM-nk-rKM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1128" y="990"/>
+            <point key="canvasLocation" x="1071" y="1035"/>
         </scene>
         <!--AccountViewContoller-->
         <scene sceneID="Rvr-aR-MBh">
@@ -368,6 +398,7 @@
         <image name="calendar" catalog="system" width="128" height="106"/>
         <image name="gearshape.fill" catalog="system" width="128" height="121"/>
         <image name="google" width="48" height="48"/>
+        <image name="noTaskFound" width="128" height="128"/>
         <image name="person.2.fill" catalog="system" width="128" height="80"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="square.grid.2x2.fill" catalog="system" width="128" height="114"/>
