--- a/ToDo/Base.lproj/Main.storyboard
+++ b/ToDo/Base.lproj/Main.storyboard
@@ -153,6 +153,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="CUn-Wi-1dt"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5ZD-s2-Mff" userLabel="dateView">
@@ -279,65 +280,89 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="130" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Znu-VQ-rID">
-                                <rect key="frame" x="10" y="49" width="394" height="759"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Znu-VQ-rID">
+                                <rect key="frame" x="0.0" y="49" width="414" height="759"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TaskListTableViewCell" id="RJz-P1-2uM" customClass="TaskListTableViewCell" customModule="ToDo" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="394" height="130"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="66.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RJz-P1-2uM" id="61v-ZM-jUU">
-                                            <rect key="frame" x="0.0" y="0.0" width="394" height="130"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="66.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gVS-6o-K3U">
-                                                    <rect key="frame" x="15" y="0.0" width="360" height="130"/>
+                                                    <rect key="frame" x="15" y="0.0" width="380" height="52.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="rCl-ep-1Xb">
-                                                            <rect key="frame" x="0.0" y="55" width="350" height="50"/>
-                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCl-ep-1Xb">
+                                                            <rect key="frame" x="5" y="12.5" width="370" height="18"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="18" id="XFT-F3-Vyf"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="justified" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="ScS-ig-xCa">
-                                                            <rect key="frame" x="0.0" y="2" width="350" height="50"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                            <rect key="frame" x="5" y="5" width="370" height="0.5"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pai-yG-Ncu">
-                                                            <rect key="frame" x="130" y="80" width="0.0" height="20"/>
+                                                            <rect key="frame" x="130" y="33.5" width="0.0" height="0.0"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Xpm-IC-6tR">
-                                                            <rect key="frame" x="265" y="87" width="100" height="40"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" misplaced="YES" text="20/20/2020" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xpm-IC-6tR">
+                                                            <rect key="frame" x="302" y="32.5" width="73" height="17"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="71" id="AR2-4e-Cfa"/>
+                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="71" id="KE9-5t-LM4"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <color key="backgroundColor" name="Secondary"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="bottom" secondItem="pai-yG-Ncu" secondAttribute="bottom" constant="30" id="2xM-NZ-FnL"/>
-                                                        <constraint firstItem="ScS-ig-xCa" firstAttribute="leading" secondItem="rCl-ep-1Xb" secondAttribute="leading" id="3s1-B3-wgk"/>
-                                                        <constraint firstItem="rCl-ep-1Xb" firstAttribute="top" secondItem="ScS-ig-xCa" secondAttribute="bottom" constant="3" id="6Lb-UP-8Na"/>
+                                                        <constraint firstAttribute="bottom" secondItem="pai-yG-Ncu" secondAttribute="bottom" constant="19" id="2xM-NZ-FnL"/>
+                                                        <constraint firstAttribute="bottom" secondItem="Xpm-IC-6tR" secondAttribute="bottom" constant="3" id="4NA-yj-6VA"/>
                                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="pai-yG-Ncu" secondAttribute="trailing" constant="20" symbolic="YES" id="70d-ZW-zaW"/>
-                                                        <constraint firstItem="ScS-ig-xCa" firstAttribute="trailing" secondItem="rCl-ep-1Xb" secondAttribute="trailing" id="KfV-5s-nP3"/>
+                                                        <constraint firstItem="ScS-ig-xCa" firstAttribute="centerX" secondItem="gVS-6o-K3U" secondAttribute="centerX" id="Khy-Z5-dGp"/>
                                                         <constraint firstItem="pai-yG-Ncu" firstAttribute="leading" secondItem="gVS-6o-K3U" secondAttribute="leading" constant="130" id="Mbl-zq-lGq"/>
                                                         <constraint firstItem="pai-yG-Ncu" firstAttribute="top" secondItem="ScS-ig-xCa" secondAttribute="bottom" constant="28" id="SKp-8Z-FE4"/>
-                                                        <constraint firstItem="ScS-ig-xCa" firstAttribute="top" secondItem="gVS-6o-K3U" secondAttribute="top" constant="2" id="khx-qt-yDa"/>
+                                                        <constraint firstItem="Xpm-IC-6tR" firstAttribute="trailing" secondItem="rCl-ep-1Xb" secondAttribute="trailing" id="VAO-T5-42H"/>
+                                                        <constraint firstItem="ScS-ig-xCa" firstAttribute="leading" secondItem="gVS-6o-K3U" secondAttribute="leading" constant="5" id="ZeY-9q-OJS"/>
+                                                        <constraint firstItem="Xpm-IC-6tR" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="pai-yG-Ncu" secondAttribute="trailing" constant="8" symbolic="YES" id="iMc-pX-oIn"/>
+                                                        <constraint firstItem="ScS-ig-xCa" firstAttribute="top" secondItem="gVS-6o-K3U" secondAttribute="top" constant="5" id="khx-qt-yDa"/>
+                                                        <constraint firstItem="rCl-ep-1Xb" firstAttribute="leading" secondItem="gVS-6o-K3U" secondAttribute="leading" constant="5" id="ky0-8P-8TC"/>
+                                                        <constraint firstItem="rCl-ep-1Xb" firstAttribute="top" secondItem="ScS-ig-xCa" secondAttribute="bottom" constant="7" id="lyJ-hT-E17"/>
+                                                        <constraint firstItem="Xpm-IC-6tR" firstAttribute="top" secondItem="rCl-ep-1Xb" secondAttribute="bottom" constant="2" id="o4Z-o1-lob"/>
+                                                        <constraint firstAttribute="trailing" secondItem="rCl-ep-1Xb" secondAttribute="trailing" constant="5" id="u2K-77-O9a"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2t-0J-Ugn">
+                                                    <rect key="frame" x="15" y="63.5" width="380" height="3"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="3" id="ztd-8j-PHR"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="k2t-0J-Ugn" secondAttribute="bottom" id="0Iw-jx-zf1"/>
                                                 <constraint firstItem="gVS-6o-K3U" firstAttribute="top" secondItem="61v-ZM-jUU" secondAttribute="topMargin" constant="-11" id="3pF-UG-egX"/>
+                                                <constraint firstItem="k2t-0J-Ugn" firstAttribute="top" secondItem="gVS-6o-K3U" secondAttribute="bottom" constant="11" id="EdM-ml-YH0"/>
+                                                <constraint firstItem="k2t-0J-Ugn" firstAttribute="leading" secondItem="61v-ZM-jUU" secondAttribute="leading" constant="15" id="OVP-aQ-Os8"/>
+                                                <constraint firstAttribute="trailing" secondItem="gVS-6o-K3U" secondAttribute="trailing" constant="19" id="Qh8-qw-4w1"/>
+                                                <constraint firstAttribute="trailing" secondItem="k2t-0J-Ugn" secondAttribute="trailing" constant="19" id="XjD-hX-gxg"/>
+                                                <constraint firstItem="gVS-6o-K3U" firstAttribute="leading" secondItem="61v-ZM-jUU" secondAttribute="leading" constant="15" id="aEH-ab-RDa"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="gVS-6o-K3U" secondAttribute="trailing" constant="-1" id="eV7-5s-zsc"/>
                                                 <constraint firstItem="gVS-6o-K3U" firstAttribute="leading" secondItem="61v-ZM-jUU" secondAttribute="leadingMargin" constant="-5" id="etz-8V-c0n"/>
-                                                <constraint firstItem="gVS-6o-K3U" firstAttribute="centerY" secondItem="61v-ZM-jUU" secondAttribute="centerY" id="yLB-dZ-EHh"/>
+                                                <constraint firstItem="gVS-6o-K3U" firstAttribute="top" secondItem="61v-ZM-jUU" secondAttribute="top" id="iBO-Qk-ZkO"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -367,8 +392,8 @@
                         <constraints>
                             <constraint firstItem="Znu-VQ-rID" firstAttribute="top" secondItem="3ks-hp-hkX" secondAttribute="top" constant="5" id="8er-ZW-SQ8"/>
                             <constraint firstItem="Xqf-hb-J04" firstAttribute="centerX" secondItem="00K-bv-kOX" secondAttribute="centerX" id="CT5-5Z-WBL"/>
-                            <constraint firstItem="3ks-hp-hkX" firstAttribute="trailing" secondItem="Znu-VQ-rID" secondAttribute="trailing" constant="10" id="MMc-mw-CrO"/>
-                            <constraint firstItem="Znu-VQ-rID" firstAttribute="leading" secondItem="3ks-hp-hkX" secondAttribute="leading" constant="10" id="ctW-70-IcW"/>
+                            <constraint firstItem="3ks-hp-hkX" firstAttribute="trailing" secondItem="Znu-VQ-rID" secondAttribute="trailing" id="MMc-mw-CrO"/>
+                            <constraint firstItem="Znu-VQ-rID" firstAttribute="leading" secondItem="3ks-hp-hkX" secondAttribute="leading" id="ctW-70-IcW"/>
                             <constraint firstItem="Xqf-hb-J04" firstAttribute="centerY" secondItem="00K-bv-kOX" secondAttribute="centerY" id="if2-dv-2Fa"/>
                             <constraint firstItem="3ks-hp-hkX" firstAttribute="bottom" secondItem="Znu-VQ-rID" secondAttribute="bottom" constant="5" id="weZ-YA-OMB"/>
                         </constraints>
